fixed header button alignment and sidebar overlay

--- a/src/resources/css/header.css
+++ b/src/resources/css/header.css
@@ -65,5 +65,5 @@ header nav {
 }
 
 .header-main-button{
-  margin-right: 1.5rem;
+  margin-right: 3rem;
 }
